kubernetes/prod-cluster/security/argo-apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: security
    istio-discovery: enabled
    secrets-injection: enabled
  name: security
