kubernetes/prod-cluster/security/argo-apps/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: security-gateway
  namespace: security
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: vault # must be the same as secret
    hosts:
    - "vault.abasitt.tech"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "vault.abasitt.tech"
   # tls:
   #   httpsRedirect: true
